--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title> NeurIPS 2023 Workshop: Self-Supervised Learning - Theory and Practice
+  <title> NeurIPS 2024 Workshop: Self-Supervised Learning - Theory and Practice
 </title>
   <link rel="canonical" href="./index.html">
   <link rel="stylesheet" href="./theme/css/bootstrap.min.css">
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="./theme/css/custom.css">
 
 
-<meta name="description" content="NeurIPS 2023 Workshop Proposal Self-Supervised Learning: Theory and Practice">
+<meta name="description" content="NeurIPS 2024 Workshop Proposal Self-Supervised Learning: Theory and Practice">
 </head>
 
 <body>
@@ -31,7 +31,7 @@
           </a>
         </div> -->
         <div class="col-xs-10">
-          <h1 class="title"><a href="../">NeurIPS 2023 Workshop: Self-Supervised Learning - Theory and Practice</a></h1>
+          <h1 class="title"><a href="../">NeurIPS 2024 Workshop: Self-Supervised Learning - Theory and Practice</a></h1>
           <br />
           <ul class="list-inline" style="font-weight:600"> 
             <li class="list-inline-item"><a href="../index.html">Home</a></li>
@@ -58,10 +58,10 @@
 <div class="row">
 <!-- <div class="col-md-7"> -->
     <p>
-   In-person workshop at <a href="https://nips.cc/Conferences/2023/Dates">NeurIPS 2023</a>
+   In-person workshop at <a href="https://nips.cc/Conferences/2024/Dates">NeurIPS 2024</a>
     </p>
     <p>
-      <b>Date:</b> December 16, 2023
+      <b>Date:</b> December 16, 2024
     </p>
     <p>
       <b>Contact Email</b>: sslneurips23@googlegroups.com
@@ -78,7 +78,8 @@
     </p>
     <p>
       <b>NeurIPS link</b>: 
-      <a href="https://neurips.cc/virtual/2023/workshop/66514">https://neurips.cc/virtual/2023/workshop/66514</a>
+      <!-- <a href="https://neurips.cc/virtual/2024/workshop/66514">TBD</a> -->
+      <a href="">TBD</a>
     </p>
     
   
