--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <li class="list-inline-item"><a href="./pages/speakers.html">Speakers</a></li>
             <li class="list-inline-item"><a href="./pages/organizers.html">Organizers</a></li>
             <li class="list-inline-item"><a href="./pages/program-committee.html">Program Committee</a></li>
-            <li class="list-inline-item"><a href="./pages/accepted-paper.html">Accepted Papers</a></li>
+            <!-- <li class="list-inline-item"><a href="./pages/accepted-paper.html">Accepted Papers</a></li> -->
           </ul>
         </div>
       </div>
@@ -61,13 +61,13 @@
    In-person workshop at <a href="https://nips.cc/Conferences/2024/Dates">NeurIPS 2024</a>
     </p>
     <p>
-      <b>Date:</b> December 16, 2024
+      <b>Date:</b> December 14 or 15, 2024
     </p>
     <p>
       <b>Contact Email</b>: sslneurips23@googlegroups.com
     </p>
     <p>
-      <b>Room:</b> 217 -- 219
+      <b>Room:</b> TBD
     </p>
     <p>
       <b>Time</b>: 9 AM -- 5:30 PM
@@ -86,7 +86,7 @@
   <!--p><b>For poster sessions: </b>posters can be viewed in the <a href='./pages/Accepted Paper.html'>Accepted Papers</a> page. If interested in a poster, you can click on the corresponding Zoom link. The authors will be presenting their posters in their Zoom.</p-->
 
   <p>
-    Self-supervised learning (SSL) is an unsupervised approach for representation learning without relying on human-provided labels. It creates auxiliary tasks on unlabeled input data and learns representations by solving these tasks. SSL has demonstrated great success on images (e.g., MoCo, PIRL, SimCLR, DINO, MAE), speech (e.g., CPC, HuBERT, wav2vec) and text (e.g., word2vec, BERT, RoBERTa, GPT, OPT) and has shown promising results in other data modalities, including graphs, time-series, audio, etc. On a wide variety of tasks, without using human-provided labels, SSL achieves performance that is close to fully supervised approaches.
+    Self-supervised learning (SSL) is an unsupervised approach for representation learning without relying on human-provided labels. It creates auxiliary tasks on unlabeled input data and learns representations by solving these tasks. SSL has demonstrated great success on images (e.g., MoCo, PIRL, SimCLR, DINO, MAE), speech (e.g., CPC, HuBERT, wav2vec) and text (e.g., word2vec, BERT, GPT, OPT, Llama) and has shown promising results in other data modalities, including graphs, time-series, audio, etc. On a wide variety of tasks, without using human-provided labels, SSL achieves performance that is close to fully supervised approaches.
   </p>
   <p>
     The existing SSL research mostly focuses on improving the empirical performance without a theoretical foundation. While the proposed SSL approaches are empirically effective on benchmarks, they aren’t well understood from a theoretical perspective or practical use-cases. For example, why do certain auxiliary tasks in SSL perform better than others? How many unlabeled data examples are needed by SSL to learn a good representation? How is the performance of SSL affected by neural architectures? And practically, where do self-supervised models shine compared to traditional supervised models?
@@ -98,7 +98,7 @@
     <!-- </div> -->
 
 <!-- <div class="text"> -->
-    <p>In the 4th iteration of this workshop, we continue to bridge this gap between theory and practice. 
+    <p>In the 5th iteration of this workshop, we continue to bridge this gap between theory and practice. 
       We bring together SSL-interested researchers from various domains to discuss the theoretical foundations of empirically well-performing SSL approaches and how the theoretical insights can further improve SSL’s empirical performance.</p>
     <p>We invite submissions of both theoretical works and empirical works, and the intersection of the two. 
       The topics include but are not limited to: </p>
@@ -137,7 +137,7 @@
     </p>
 
     <p>
-      Previous editions of our workshop: <a href="https://nips.cc/Conferences/2020/ScheduleMultitrack?event=16146">2020</a>, <a href="https://sslneuips21.github.io/">2021</a>, <a href="https://sslneuips22.github.io/">2022</a>.
+      Previous editions of our workshop: <a href="https://nips.cc/Conferences/2020/ScheduleMultitrack?event=16146">2020</a>, <a href="https://sslneuips21.github.io/">2021</a>, <a href="https://sslneuips22.github.io/">2022</a>, <a href="https://sslneuips23.github.io/">2023</a>.
     </p>
 
     
