--- a/pages/organizers.html
+++ b/pages/organizers.html
@@ -8,7 +8,7 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>Organizers | NeurIPS 2023 Workshop: Self-Supervised Learning - Theory and Practice
+  <title>Organizers | NeurIPS 2024 Workshop: Self-Supervised Learning - Theory and Practice
 </title>
   <link rel="canonical" href="../pages/organizers.html">
   <link rel="stylesheet" href="../theme/css/bootstrap.min.css">
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="../theme/css/custom.css">
 
 
-<meta name="description" content="NeurIPS 2023 Workshop: Self-Supervised Learning - Theory and Practice">
+<meta name="description" content="NeurIPS 2024 Workshop: Self-Supervised Learning - Theory and Practice">
 </head>
 
 <body>
@@ -31,7 +31,7 @@
           </a>
         </div> -->
         <div class="col-xs-10">
-          <h1 class="title"><a href="../">NeurIPS 2023 Workshop: Self-Supervised Learning - Theory and Practice</a></h1>
+          <h1 class="title"><a href="../">NeurIPS 2024 Workshop: Self-Supervised Learning - Theory and Practice</a></h1>
           <!-- <p class="text-muted">Workshop at NeurIPS 2020</p> -->
           <br />
           <ul class="list-inline" style="font-weight:600"> 
@@ -72,26 +72,23 @@ for helping peer review all submissions. -->
     <!-- 6/12 = 1/2 width on mobile, 4/12 = 1/3 screen on laptop -->
     <div class="col-xs-12 col-md-4"> 
       <div class="thumbnail">
-          <a href="https://tengdahan.github.io/">
+          <a href="https://people.eecs.berkeley.edu/~xdwang/">
           <img 
-              src="../images/headshots_200x200/tengda.jpg"
-              alt="Tengda Han headshot"
+              src="../images/headshots_200x200/xudong.jpeg"
+              alt="XuDong Wang headshot"
               style="width:240px;height:240px"
               align="center">
           <div class="caption">
-              <h5>Tengda Han</h5>
+              <h5>XuDong Wang</h5>
           </div>
           </a>
-          <p>Post-Doc, VGG, University of Oxford
+          <p>PhD Candidate, UC Berkeley
           <br />
           <emph>Email:</emph>
-          <a href="mailto:htd@robots.ox.ac.uk"> htd@robots.ox.ac.uk </a>
-          </p>
-          <!-- <style>
-            .blb{float:left;width:65%}
-          </style> -->
-        </div>
+          <a href="mailto:xdwang@eecs.berkeley.edu"> xdwang@eecs.berkeley.edu </a>
+          </p>   
       </div>
+    </div>
 
     <div class="col-xs-12 col-md-4"> 
       <div class="thumbnail">
@@ -105,11 +102,59 @@ for helping peer review all submissions. -->
               <h5>Ishan Misra</h5>
           </div>
           </a>
-          <p>Research Scientist, FAIR (Meta AI)
+          <p>Research Scientist, GenAI, Meta
           <br />
           <emph>Email:</emph>
-          <a href="mailto:imisra@fb.com"> imisra@fb.com </a>
+          <a href="mailto:imisra@meta.com"> imisra@meta.com </a>
           </p>   
+      </div>
+    </div>
+
+    <div class="col-xs-12 col-md-4"> 
+      <div class="thumbnail">
+          <a href="https://scholar.google.com/citations?user=eiB0s-kAAAAJ&hl=fr">
+          <img 
+              src="../images/headshots_200x200/mathilde.jpg"
+              alt="Mathilde Caron headshot"
+              style="width:240px;height:240px"
+              align="center">
+          <div class="caption">
+              <h5>Mathilde Caron</h5>
+          </div>
+          </a>
+          <p>Research Scientist, Google DeepMind
+          
+          <!-- <br /> -->
+          <!-- <emph>Finance Chair</emph> -->
+          <!-- </p> -->
+          <br />
+          <emph>Email:</emph>
+          <a href="mailto:mathicaron31@gmail.com"> mathicaron31@gmail.com </a>
+          </p>    
+          <br/> 
+      </div>
+    </div>
+
+    <div class="col-xs-12 col-md-4"> 
+      <div class="thumbnail">
+          <a href="https://tengdahan.github.io/">
+          <img 
+              src="../images/headshots_200x200/tengda.jpg"
+              alt="Tengda Han headshot"
+              style="width:240px;height:240px"
+              align="center">
+          <div class="caption">
+              <h5>Tengda Han</h5>
+          </div>
+          </a>
+          <p>Research Scientist, Google DeepMind
+          <br />
+          <emph>Email:</emph>
+          <a href="mailto:htd@robots.ox.ac.uk"> htd@robots.ox.ac.uk </a>
+          </p>
+          <!-- <style>
+            .blb{float:left;width:65%}
+          </style> -->
       </div>
     </div>
 
@@ -145,55 +190,11 @@ for helping peer review all submissions. -->
     <!-- <p><br /></p> -->
     <!-- <p><br /></p> -->
     <!-- 6/12 = 1/2 width on mobile, 4/12 = 1/3 screen on laptop -->
-    <div class="col-xs-12 col-md-4"> 
-        <div class="thumbnail">
-            <a href="https://scholar.google.com/citations?user=eiB0s-kAAAAJ&hl=fr">
-            <img 
-                src="../images/headshots_200x200/mathilde.jpg"
-                alt="Mathilde Caron headshot"
-                style="width:240px;height:240px"
-                align="center">
-            <div class="caption">
-                <h5>Mathilde Caron</h5>
-            </div>
-            </a>
-            <p>Research Scientist, Google Research
-            
-            <!-- <br /> -->
-            <!-- <emph>Finance Chair</emph> -->
-            <!-- </p> -->
-            <br />
-            <emph>Email:</emph>
-            <a href="mailto:mathicaron31@gmail.com"> mathicaron31@gmail.com </a>
-            </p>    
-            <br/> 
-    </div>
-    </div>
+
 
     <!-- <p><br /></p> -->
 
-    <!-- 6/12 = 1/2 width on mobile, 4/12 = 1/3 screen on laptop -->
-    <div class="col-xs-12 col-md-4">
-        <div class="thumbnail">
-            <a href="https://hildekuehne.github.io/">
-            <img 
-                src="../images/headshots_200x200/hilde.jpg"
-                alt="Hilde Kuehne headshot"
-                style="width:240px;height:240px"
-                align="center">
-            <div class="caption">
-                <h5>Hilde Kuehne</h5>
-            </div>
-            </a>
-            <p>Professor, University of Bonn; MIT-IBM Watson AI Lab
-            <br />
-            <emph>Email:</emph>
-            <a href="mailto:kuehne@cs.uni-bonn.de"> kuehne@cs.uni-bonn.de </a>
-            <!-- <br /> -->
-            <!-- <emph><a href="https://scholar.google.com/citations?user=voqw10cAAAAJ&hl=en"> Google Scholar Page</a></emph> -->
-            </p>  
-    </div>
-    </div>
+  </div>
 
     <!-- 6/12 = 1/2 width on mobile, 4/12 = 1/3 screen on laptop -->
 
