add gmail account

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <b>Date:</b> December 14 or 15, 2024
     </p>
     <p>
-      <b>Contact Email</b>: sslneurips23@googlegroups.com
+      <b>Contact Email</b>: sslneurips2024@gmail.com
     </p>
     <p>
       <b>Room:</b> TBD
