--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <li class="list-inline-item"><a href="./pages/schedule.html">Schedule</a></li>
             <li class="list-inline-item"><a href="./pages/speakers.html">Speakers</a></li>
             <li class="list-inline-item"><a href="./pages/organizers.html">Organizers</a></li>
-            <li class="list-inline-item"><a href="./pages/program-committee.html">Program Committee</a></li>
+            <!-- <li class="list-inline-item"><a href="./pages/program-committee.html">Program Committee</a></li> -->
             <!-- <li class="list-inline-item"><a href="./pages/accepted-paper.html">Accepted Papers</a></li> -->
           </ul>
         </div>
@@ -67,7 +67,7 @@
       <b>Contact Email</b>: sslneurips2024@gmail.com
     </p>
     <p>
-      <b>Room:</b> TBD
+      <b>Location:</b> Room TBD, Vancouver, Canada
     </p>
     <p>
       <b>Time</b>: 9 AM -- 5:30 PM
