--- a/pages/call-for-participation.html
+++ b/pages/call-for-participation.html
@@ -8,7 +8,7 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>Call for Papers | NeurIPS 2023 Workshop: Self-Supervised Learning - Theory and Practice
+  <title>Call for Papers | NeurIPS 2024 Workshop: Self-Supervised Learning - Theory and Practice
 </title>
   <link rel="canonical" href="../pages/call-for-participation.html">
 
@@ -21,7 +21,7 @@
   <link rel="stylesheet" href="../theme/css/custom.css">
 
 
-<meta name="description" content="Call for Papers. NeurIPS 2023 Workshop">
+<meta name="description" content="Call for Papers. NeurIPS 2024 Workshop">
 </head>
 
 <body>
@@ -34,7 +34,7 @@
           </a>
         </div> -->
         <div class="col-xs-10">
-          <h1 class="title"><a href="../">NeurIPS 2023 Workshop: Self-Supervised Learning - Theory and Practice</a></h1>
+          <h1 class="title"><a href="../">NeurIPS 2024 Workshop: Self-Supervised Learning - Theory and Practice</a></h1>
           <!-- <p class="text-muted">Workshop at NeurIPS 2020</p> -->
           <br />
           <ul class="list-inline" style="font-weight:600"> 
@@ -43,8 +43,8 @@
             <li class="list-inline-item"><a href="../pages/schedule.html">Schedule</a></li>
             <li class="list-inline-item"><a href="../pages/speakers.html">Speakers</a></li>
             <li class="list-inline-item"><a href="../pages/organizers.html">Organizers</a></li>
-            <li class="list-inline-item"><a href="../pages/program-committee.html">Program Committee</a></li>
-            <li class="list-inline-item"><a href="../pages/accepted-paper.html">Accepted Papers</a></li>
+            <!-- <li class="list-inline-item"><a href="../pages/program-committee.html">Program Committee</a></li>
+            <li class="list-inline-item"><a href="../pages/accepted-paper.html">Accepted Papers</a></li> -->
           </ul>
         </div>
       </div>
@@ -97,11 +97,11 @@
       This workshop has no archival proceedings.
     </p>
     
-    <p> <b>Contact:</b> sslneurips23@googlegroups.com</p>
-    <p> Paper submission at <b><a href="https://openreview.net/group?id=NeurIPS.cc/2023/Workshop/SSLTheoryPractice23">OpenReview</a></b>
+    <p> <b>Contact:</b> sslneurips2024@gmail.com</p>
+    <p> Paper submission at <b><a href="">OpenReview (TBD)</a></b>
     
     <h4>Important Dates </h4>
-<p>Paper submission deadline: <s>Oct 2</s> Oct 7, 23:59 AoE<br />
+<p>Paper submission deadline: Oct 1, 23:59 AoE<br />
 Review deadline: Oct 25, 23:59 AoE<br />
 Author notification: Oct 27, 23:59 AoE<br />
 Camera-ready papers due: Nov 1, 23:59 AoE</p>
