--- a/pages/speakers.html
+++ b/pages/speakers.html
@@ -8,7 +8,7 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>Invited Speakers | NeurIPS 2023 Workshop: Self-Supervised Learning - Theory and Practice
+  <title>Invited Speakers | NeurIPS 2024 Workshop: Self-Supervised Learning - Theory and Practice
 </title>
   <link rel="canonical" href="../pages/speakers.html">
 
@@ -34,7 +34,7 @@
           </a>
         </div> -->
         <div class="col-xs-10">
-          <h1 class="title"><a href="../">NeurIPS 2023 Workshop: Self-Supervised Learning - Theory and Practice</a></h1>
+          <h1 class="title"><a href="../">NeurIPS 2024 Workshop: Self-Supervised Learning - Theory and Practice</a></h1>
           <!-- <p class="text-muted">Workshop at NeurIPS 2020</p> -->
           <br />
           <ul class="list-inline" style="font-weight:600"> 
@@ -43,8 +43,8 @@
             <li class="list-inline-item"><a href="../pages/schedule.html">Schedule</a></li>
             <li class="list-inline-item"><a href="../pages/speakers.html">Speakers</a></li>
             <li class="list-inline-item"><a href="../pages/organizers.html">Organizers</a></li>
-            <li class="list-inline-item"><a href="../pages/program-committee.html">Program Committee</a></li>
-            <li class="list-inline-item"><a href="../pages/accepted-paper.html">Accepted Papers</a></li>
+            <!-- <li class="list-inline-item"><a href="../pages/program-committee.html">Program Committee</a></li> -->
+            <!-- <li class="list-inline-item"><a href="../pages/accepted-paper.html">Accepted Papers</a></li> -->
           </ul>
         </div>
       </div>
@@ -64,36 +64,36 @@
 <div class="row display-flex">
   
     <div class="col-xs-12 col-md-4" style="height:360px"> 
-        <div class="thumbnail">
-            <a href="https://yukimasano.github.io/">
-            <img 
-                src="../images/speakers_200x200/yuki.jpg"
-                alt="Yuki M Asano headshot"
-                style="width:240px;height:240px"
-                align="center">
-            <div class="caption">
-                <h5>Yuki M Asano</h5>
-            </div>
-            </a>
-            <p>Assistant Professor, University of Amsterdam
-            <br />
-            </p> 
-    </div>
+      <div class="thumbnail">
+          <a href="https://people.eecs.berkeley.edu/~trevor/">
+          <img 
+              src="../images/speakers_200x200/trevor.jpg"
+              alt="Trevor Darrell headshot"
+              style="width:240px;height:240px"
+              align="center">
+          <div class="caption">
+              <h5>Trevor Darrell</h5>
+          </div>
+          </a>
+          <p>Professor, UC Berkeley
+          <br />
+          </p> 
+      </div>
     </div>
 
     <div class="col-xs-12 col-md-4" style="height:360px"> 
       <div class="thumbnail">
-          <a href="https://jungyhuk.github.io/">
+          <a href="https://www.cs.jhu.edu/~ayuille/">
           <img 
-              src="../images/speakers_200x200/xinyun.jpg"
-              alt="Xinyun Chen headshot"
+              src="../images/speakers_200x200/alan.jpg"
+              alt="Alan Yuille headshot"
               style="width:240px;height:240px"
               align="center">
           <div class="caption">
-              <h5>Xinyun Chen</h5>
+              <h5>Alan Yuille</h5>
           </div>
           </a>
-          <p>Research Scientist, Google Brain
+          <p>Professor, Johns Hopkins University
           <br />
           </p>  
   </div>
@@ -102,17 +102,17 @@
   
     <div class="col-xs-12 col-md-4" style="height:360px"> 
         <div class="thumbnail">
-            <a href="http://people.eecs.berkeley.edu/~efros/">
+            <a href="https://hildekuehne.github.io/">
             <img 
-                src="../images/speakers_200x200/alyosha.jpg"
-                alt="Alyosha Efros headshot"
+                src="../images/speakers_200x200/hilde.jpg"
+                alt="Hilde Kuehne headshot"
                 style="width:240px;height:240px"
                 align="center">
             <div class="caption">
-                <h5>Alyosha Efros</h5>
+                <h5>Hilde Kuehne</h5>
             </div>
             </a>
-            <p>Professor, UC Berkeley
+            <p>Professor, Univ. of Bonn & MIT-IBM Watson
             <br />
             </p>  
     </div>
@@ -121,17 +121,17 @@
   
   <div class="col-xs-12 col-md-4" style="height:360px"> 
     <div class="thumbnail">
-        <a href="https://ai.stanford.edu/~cbfinn/">
+        <a href="https://web.mit.edu/phillipi/">
         <img 
-            src="../images/speakers_200x200/chelsea.jpg"
-            alt="Chelsea Finn headshot"
+            src="../images/speakers_200x200/pauline.jpg"
+            alt="Phillip Isola headshot"
             style="width:240px;height:240px"
             align="center">
         <div class="caption">
-            <h5>Chelsea Finn</h5>
+            <h5>Phillip Isola</h5>
         </div>
         </a>
-        <p>Assistant Professor, Stanford University
+        <p>Associate Professor, MIT
         <br />
         <!-- <br /> -->
         <!-- <emph>Finance Chair</emph> -->
@@ -144,42 +144,42 @@
   </div>
   
     <div class="col-xs-12 col-md-4" style="height:360px"> 
-        <div class="thumbnail">
-            <a href="http://www.cs.cmu.edu/~abhinavg/">
-            <img 
-                src="../images/speakers_200x200/abhinav.jpg"
-                alt="Abhinav Gupta headshot"
-                style="width:240px;height:240px"
-                align="center">
-            <div class="caption">
-                <h5>Abhinav Gupta</h5>
-            </div>
-            </a>
-            <p>Associate Professor, CMU
-            <br />
-            <!-- <br /> -->
-            <!-- <emph>Finance Chair</emph> -->
-            <!-- </p> -->
-            <br />
-            <!-- <br /> -->
-            <!-- <emph><a href="https://scholar.google.com/citations?user=voqw10cAAAAJ&hl=en"> Google Scholar Page</a></emph> -->
-            </p>  
-    </div>
+      <div class="thumbnail">
+        <a href="https://scholar.google.com.hk/citations?user=lc45xlcAAAAJ&hl=en/">
+        <img 
+            src="../images/speakers_200x200/ziwei.jpeg"
+            alt="Ziwei Liu headshot"
+            style="width:240px;height:240px"
+            align="center">
+        <div class="caption">
+            <h5>Ziwei Liu</h5>
+        </div>
+        </a>
+        <p>Assistant Professor, Nanyang Technological University 
+        <br />
+        <!-- <br /> -->
+        <!-- <emph>Finance Chair</emph> -->
+        <!-- </p> -->
+        <br />
+        <!-- <br /> -->
+        <!-- <emph><a href="https://scholar.google.com/citations?user=voqw10cAAAAJ&hl=en"> Google Scholar Page</a></emph> -->
+        </p>  
+      </div>
     </div>
 
     <div class="col-xs-12 col-md-4" style="height:360px"> 
       <div class="thumbnail">
-          <a href="https://europe.naverlabs.com/people_user/diane-larlus/">
+          <a href="https://sherryy.github.io/">
           <img 
-              src="../images/speakers_200x200/diane.jpg"
-              alt="Diane Larlus headshot"
+              src="../images/speakers_200x200/sherry.jpeg"
+              alt="Sherry Yang headshot"
               style="width:240px;height:240px"
               align="center">
           <div class="caption">
-              <h5>Diane Larlus</h5>
+              <h5>Sherry Yang</h5>
           </div>
           </a>
-          <p>Research Scientist, NAVER Labs
+          <p>Research Scientist, Google DeepMind
           <!-- <br /> -->
           <!-- <emph>Finance Chair</emph> -->
           <!-- </p> -->
@@ -190,7 +190,77 @@
     </div>
     </div>
   
-  
+    <div class="col-xs-12 col-md-4" style="height:360px"> 
+      <div class="thumbnail">
+        <a href="https://homes.cs.washington.edu/~yejin/">
+        <img 
+            src="../images/speakers_200x200/yejin_choi.jpg"
+            alt="Yejin Choi headshot"
+            style="width:240px;height:240px"
+            align="center">
+        <div class="caption">
+            <h5>Yejin Choi</h5>
+        </div>
+        </a>
+        <p>Professor, University of Washington
+        <br />
+        <!-- <br /> -->
+        <!-- <emph>Finance Chair</emph> -->
+        <!-- </p> -->
+        <br />
+        <!-- <br /> -->
+        <!-- <emph><a href="https://scholar.google.com/citations?user=voqw10cAAAAJ&hl=en"> Google Scholar Page</a></emph> -->
+        </p>  
+      </div>
+    </div>
+
+    <div class="col-xs-12 col-md-4" style="height:360px"> 
+      <div class="thumbnail">
+        <a href="https://www.cs.washington.edu/people/faculty/lsz/">
+        <img
+            src="../images/speakers_200x200/luke.jpeg"
+            alt="Luke Zettlemoyer headshot"
+            style="width:240px;height:240px"
+            align="center">
+        <div class="caption">
+            <h5>Luke Zettlemoyer</h5>
+        </div>
+        </a>
+        <p>Professor, University of Washington
+        <br />
+        <!-- <br /> -->
+        <!-- <emph>Finance Chair</emph> -->
+        <!-- </p> -->
+        <br />
+        <!-- <br /> -->
+        <!-- <emph><a href="https://scholar.google.com/citations?user=voqw10cAAAAJ&hl=en"> Google Scholar Page</a></emph> -->
+        </p>  
+      </div>
+    </div>
+
+    <div class="col-xs-12 col-md-4" style="height:360px"> 
+      <div class="thumbnail">
+        <a href="https://scholar.google.com/citations?user=8qisprwAAAAJ&hl=en/">
+        <img
+            src="../images/speakers_200x200/luke.jpeg"
+            alt="Pauline Luc headshot"
+            style="width:240px;height:240px"
+            align="center">
+        <div class="caption">
+            <h5>Pauline Luc</h5>
+        </div>
+        </a>
+        <p>Research Scientist, Google DeepMind
+        <br />
+        <!-- <br /> -->
+        <!-- <emph>Finance Chair</emph> -->
+        <!-- </p> -->
+        <br />
+        <!-- <br /> -->
+        <!-- <emph><a href="https://scholar.google.com/citations?user=voqw10cAAAAJ&hl=en"> Google Scholar Page</a></emph> -->
+        </p>  
+      </div>
+    </div>
     <!-- <div class="col-xs-12 col-md-4" style="height:360px"> 
         <div class="thumbnail">
             <a href="https://scholar.google.com/citations?user=xImarzoAAAAJ&hl=en">
