update speaker figures

--- a/pages/speakers.html
+++ b/pages/speakers.html
@@ -53,7 +53,7 @@
 
   <div class="main">
     <div class="container">
-      <h1>Speakers (alphabetical order)
+      <h1>Speakers (Random order)
 </h1>
       <hr>
 <article class="article">
@@ -112,7 +112,7 @@
                 <h5>Hilde Kuehne</h5>
             </div>
             </a>
-            <p>Professor, Univ. of Bonn & MIT-IBM Watson
+            <p>Professor, Univ. of Bonn & MIT-IBM Watson AI Lab
             <br />
             </p>  
     </div>
