--- a/index.html
+++ b/index.html
@@ -73,8 +73,12 @@
       <b>Time</b>: 9 AM -- 5:30 PM
     </p>
     <p>
+      <b>Speakers</b>:
+      <a href="./pages/speakers.html">here</a>
+    </p>
+    <p>
       <b>Schedule</b>:
-      <a href="./pages/schedule.html">here</a>
+      <a href="">TBD</a>
     </p>
     <p>
       <b>NeurIPS link</b>: 
