update speaker order

--- a/pages/speakers.html
+++ b/pages/speakers.html
@@ -53,7 +53,7 @@
 
   <div class="main">
     <div class="container">
-      <h1>Speakers (Random order)
+      <h1>Speakers (Alphabetical Order)
 </h1>
       <hr>
 <article class="article">
@@ -63,62 +63,48 @@
 <div class="container">
 <div class="row display-flex">
   
-    <div class="col-xs-12 col-md-4" style="height:360px"> 
-      <div class="thumbnail">
-          <a href="https://people.eecs.berkeley.edu/~trevor/">
-          <img 
-              src="../images/speakers_200x200/trevor.jpg"
-              alt="Trevor Darrell headshot"
-              style="width:240px;height:240px"
-              align="center">
-          <div class="caption">
-              <h5>Trevor Darrell</h5>
-          </div>
-          </a>
-          <p>Professor, UC Berkeley
-          <br />
-          </p> 
+  <div class="col-xs-12 col-md-4" style="height:360px"> 
+    <div class="thumbnail">
+      <a href="https://homes.cs.washington.edu/~yejin/">
+      <img 
+          src="../images/speakers_200x200/yejin_choi.jpg"
+          alt="Yejin Choi headshot"
+          style="width:240px;height:240px"
+          align="center">
+      <div class="caption">
+          <h5>Yejin Choi</h5>
       </div>
+      </a>
+      <p>Professor, University of Washington
+      <br />
+      <!-- <br /> -->
+      <!-- <emph>Finance Chair</emph> -->
+      <!-- </p> -->
+      <br />
+      <!-- <br /> -->
+      <!-- <emph><a href="https://scholar.google.com/citations?user=voqw10cAAAAJ&hl=en"> Google Scholar Page</a></emph> -->
+      </p>  
     </div>
-
-    <div class="col-xs-12 col-md-4" style="height:360px"> 
-      <div class="thumbnail">
-          <a href="https://www.cs.jhu.edu/~ayuille/">
-          <img 
-              src="../images/speakers_200x200/alan.jpg"
-              alt="Alan Yuille headshot"
-              style="width:240px;height:240px"
-              align="center">
-          <div class="caption">
-              <h5>Alan Yuille</h5>
-          </div>
-          </a>
-          <p>Professor, Johns Hopkins University
-          <br />
-          </p>  
   </div>
+  
+  <div class="col-xs-12 col-md-4" style="height:360px"> 
+    <div class="thumbnail">
+        <a href="https://people.eecs.berkeley.edu/~trevor/">
+        <img 
+            src="../images/speakers_200x200/trevor.jpg"
+            alt="Trevor Darrell headshot"
+            style="width:240px;height:240px"
+            align="center">
+        <div class="caption">
+            <h5>Trevor Darrell</h5>
+        </div>
+        </a>
+        <p>Professor, UC Berkeley
+        <br />
+        </p> 
+    </div>
   </div>
 
-  
-    <div class="col-xs-12 col-md-4" style="height:360px"> 
-        <div class="thumbnail">
-            <a href="https://hildekuehne.github.io/">
-            <img 
-                src="../images/speakers_200x200/hilde.jpg"
-                alt="Hilde Kuehne headshot"
-                style="width:240px;height:240px"
-                align="center">
-            <div class="caption">
-                <h5>Hilde Kuehne</h5>
-            </div>
-            </a>
-            <p>Professor, Univ. of Bonn & MIT-IBM Watson AI Lab
-            <br />
-            </p>  
-    </div>
-    </div>
-    
-  
   <div class="col-xs-12 col-md-4" style="height:360px"> 
     <div class="thumbnail">
         <a href="https://web.mit.edu/phillipi/">
@@ -142,116 +128,107 @@
         </p>  
   </div>
   </div>
-  
-    <div class="col-xs-12 col-md-4" style="height:360px"> 
-      <div class="thumbnail">
-        <a href="https://scholar.google.com.hk/citations?user=lc45xlcAAAAJ&hl=en/">
+
+    
+  <div class="col-xs-12 col-md-4" style="height:360px"> 
+    <div class="thumbnail">
+        <a href="https://hildekuehne.github.io/">
         <img 
-            src="../images/speakers_200x200/ziwei.jpeg"
-            alt="Ziwei Liu headshot"
+            src="../images/speakers_200x200/hilde.jpg"
+            alt="Hilde Kuehne headshot"
             style="width:240px;height:240px"
             align="center">
         <div class="caption">
-            <h5>Ziwei Liu</h5>
+            <h5>Hilde Kuehne</h5>
         </div>
         </a>
-        <p>Assistant Professor, Nanyang Technological University 
+        <p>Professor, Univ. of Bonn & MIT-IBM Watson AI Lab
         <br />
-        <!-- <br /> -->
-        <!-- <emph>Finance Chair</emph> -->
-        <!-- </p> -->
-        <br />
-        <!-- <br /> -->
-        <!-- <emph><a href="https://scholar.google.com/citations?user=voqw10cAAAAJ&hl=en"> Google Scholar Page</a></emph> -->
         </p>  
-      </div>
     </div>
+  </div>
 
-    <div class="col-xs-12 col-md-4" style="height:360px"> 
-      <div class="thumbnail">
-          <a href="https://sherryy.github.io/">
-          <img 
-              src="../images/speakers_200x200/sherry.jpeg"
-              alt="Sherry Yang headshot"
-              style="width:240px;height:240px"
-              align="center">
-          <div class="caption">
-              <h5>Sherry Yang</h5>
-          </div>
-          </a>
-          <p>Research Scientist, Google DeepMind
-          <!-- <br /> -->
-          <!-- <emph>Finance Chair</emph> -->
-          <!-- </p> -->
-          <br />
-          <!-- <br /> -->
-          <!-- <emph><a href="https://scholar.google.com/citations?user=voqw10cAAAAJ&hl=en"> Google Scholar Page</a></emph> -->
-          </p>  
+
+  <div class="col-xs-12 col-md-4" style="height:360px"> 
+    <div class="thumbnail">
+      <a href="https://scholar.google.com/citations?user=8qisprwAAAAJ&hl=en/">
+      <img
+          src="../images/speakers_200x200/pauline.jpg"
+          alt="Pauline Luc headshot"
+          style="width:240px;height:240px"
+          align="center">
+      <div class="caption">
+          <h5>Pauline Luc</h5>
+      </div>
+      </a>
+      <p>Research Scientist, Google DeepMind
+      <br />
+      <!-- <br /> -->
+      <!-- <emph>Finance Chair</emph> -->
+      <!-- </p> -->
+      <br />
+      <!-- <br /> -->
+      <!-- <emph><a href="https://scholar.google.com/citations?user=voqw10cAAAAJ&hl=en"> Google Scholar Page</a></emph> -->
+      </p>  
     </div>
+  </div>
+
+
+  <div class="col-xs-12 col-md-4" style="height:360px"> 
+    <div class="thumbnail">
+      <a href="https://scholar.google.com.hk/citations?user=lc45xlcAAAAJ&hl=en/">
+      <img 
+          src="../images/speakers_200x200/ziwei.jpeg"
+          alt="Ziwei Liu headshot"
+          style="width:240px;height:240px"
+          align="center">
+      <div class="caption">
+          <h5>Ziwei Liu</h5>
+      </div>
+      </a>
+      <p>Assistant Professor, Nanyang Technological University 
+      <br />
+      <!-- <br /> -->
+      <!-- <emph>Finance Chair</emph> -->
+      <!-- </p> -->
+      <br />
+      <!-- <br /> -->
+      <!-- <emph><a href="https://scholar.google.com/citations?user=voqw10cAAAAJ&hl=en"> Google Scholar Page</a></emph> -->
+      </p>  
     </div>
-  
-    <div class="col-xs-12 col-md-4" style="height:360px"> 
-      <div class="thumbnail">
-        <a href="https://homes.cs.washington.edu/~yejin/">
+  </div>
+
+  <div class="col-xs-12 col-md-4" style="height:360px"> 
+    <div class="thumbnail">
+        <a href="https://www.cs.jhu.edu/~ayuille/">
         <img 
-            src="../images/speakers_200x200/yejin_choi.jpg"
-            alt="Yejin Choi headshot"
+            src="../images/speakers_200x200/alan.jpg"
+            alt="Alan Yuille headshot"
             style="width:240px;height:240px"
             align="center">
         <div class="caption">
-            <h5>Yejin Choi</h5>
+            <h5>Alan Yuille</h5>
         </div>
         </a>
-        <p>Professor, University of Washington
+        <p>Professor, Johns Hopkins University
         <br />
-        <!-- <br /> -->
-        <!-- <emph>Finance Chair</emph> -->
-        <!-- </p> -->
-        <br />
-        <!-- <br /> -->
-        <!-- <emph><a href="https://scholar.google.com/citations?user=voqw10cAAAAJ&hl=en"> Google Scholar Page</a></emph> -->
         </p>  
-      </div>
     </div>
+  </div>
 
-    <div class="col-xs-12 col-md-4" style="height:360px"> 
-      <div class="thumbnail">
-        <a href="https://www.cs.washington.edu/people/faculty/lsz/">
-        <img
-            src="../images/speakers_200x200/luke.jpeg"
-            alt="Luke Zettlemoyer headshot"
+  <div class="col-xs-12 col-md-4" style="height:360px"> 
+    <div class="thumbnail">
+        <a href="https://sherryy.github.io/">
+        <img 
+            src="../images/speakers_200x200/sherry.jpeg"
+            alt="Sherry Yang headshot"
             style="width:240px;height:240px"
             align="center">
         <div class="caption">
-            <h5>Luke Zettlemoyer</h5>
-        </div>
-        </a>
-        <p>Professor, University of Washington
-        <br />
-        <!-- <br /> -->
-        <!-- <emph>Finance Chair</emph> -->
-        <!-- </p> -->
-        <br />
-        <!-- <br /> -->
-        <!-- <emph><a href="https://scholar.google.com/citations?user=voqw10cAAAAJ&hl=en"> Google Scholar Page</a></emph> -->
-        </p>  
-      </div>
-    </div>
-
-    <div class="col-xs-12 col-md-4" style="height:360px"> 
-      <div class="thumbnail">
-        <a href="https://scholar.google.com/citations?user=8qisprwAAAAJ&hl=en/">
-        <img
-            src="../images/speakers_200x200/pauline.jpg"
-            alt="Pauline Luc headshot"
-            style="width:240px;height:240px"
-            align="center">
-        <div class="caption">
-            <h5>Pauline Luc</h5>
+            <h5>Sherry Yang</h5>
         </div>
         </a>
         <p>Research Scientist, Google DeepMind
-        <br />
         <!-- <br /> -->
         <!-- <emph>Finance Chair</emph> -->
         <!-- </p> -->
@@ -259,8 +236,34 @@
         <!-- <br /> -->
         <!-- <emph><a href="https://scholar.google.com/citations?user=voqw10cAAAAJ&hl=en"> Google Scholar Page</a></emph> -->
         </p>  
-      </div>
     </div>
+  </div>
+
+
+  <div class="col-xs-12 col-md-4" style="height:360px"> 
+    <div class="thumbnail">
+      <a href="https://www.cs.washington.edu/people/faculty/lsz/">
+      <img
+          src="../images/speakers_200x200/luke.jpeg"
+          alt="Luke Zettlemoyer headshot"
+          style="width:240px;height:240px"
+          align="center">
+      <div class="caption">
+          <h5>Luke Zettlemoyer</h5>
+      </div>
+      </a>
+      <p>Professor, University of Washington
+      <br />
+      <!-- <br /> -->
+      <!-- <emph>Finance Chair</emph> -->
+      <!-- </p> -->
+      <br />
+      <!-- <br /> -->
+      <!-- <emph><a href="https://scholar.google.com/citations?user=voqw10cAAAAJ&hl=en"> Google Scholar Page</a></emph> -->
+      </p>  
+    </div>
+  </div>
+
     <!-- <div class="col-xs-12 col-md-4" style="height:360px"> 
         <div class="thumbnail">
             <a href="https://scholar.google.com/citations?user=xImarzoAAAAJ&hl=en">
